# pyri-robotics

./: README.md  pyproject.toml  setup.py
config/: pyri_jog_cartesian_service_default_info.yml  pyri_jog_joint_service_default_info.yml
doc/: robot_blocks_functions.md
src/pyri/robotics/: blockly.py  device_type_adapter.py  sandbox_functions.py  service_node_launch.py
src/pyri/robotics/jog_cartesian_service/: __main__.py  tech.pyri.robotics.pluginJogCartesianSpace.robdef
src/pyri/robotics/jog_joint_service/: __main__.py  tech.pyri.robotics.pluginJogJointSpace.robdef
src/pyri/robotics/robotics_jog_service/: __main__.py  pyri_robotics_jog_service_default_info.yml  tech.pyri.robotics.jog.robdef
src/pyri/robotics/robotics_motion_service/: __main__.py  pyri_robotics_motion_service_default_info.yml  tech.pyri.robotics.motion.robdef
src/pyri/robotics/util/: invkin.py
test/: test_blockly.py
test/test_pyri_robotics/: test_blockly.py
